css/main.scss
body {
    margin: 1.5em;
    font-family: 'Poppins', sans-serif;
}

a {
    text-decoration: none;
    font-size: 1.3rem;
}

.hero-img {
    position: absolute;
    top: 0;
    left: 0;
    background: url('../images/shoe.jpg');
    background-size: cover;
    background-position-x: 20%;
    background-position-y: 20%;
    width: 100%;
    height: 100vh;
    z-index: -1;
    animation: introLoad 2s forwards;
}

.logo {
    color: white;
    font-weight: bolder;
}

nav {
    position: fixed;
    right: 0;
    top: 0;
    background: white;
    height: 100vh;
    width: 50%;
    z-index: 100;
    text-transform: uppercase;
    transform: translateX(100%);
    transition: transform .5s ease-in-out;
    ul {
        list-style-type: none;
        padding: 0;
        margin-top: 8em;
        a {
            color: black;
            padding: .75em 2em;
            display: block;
            &:hover {
                background: rgb(243, 239, 239);
            }
        }
    }
    .close {
        float: right;
        margin: 2em;
        width: 2.5em;
    }
}

header {
    display: flex;
    justify-content: space-between;
    svg {
        width: 2.3em;
        margin-top: -0.6em;
        cursor: pointer;
    }
}

h1 {
    font-size: 3rem;
    margin-top: 2em;
    line-height: 3.3rem;
}

.subhead {
    font-size: 1.4rem;
}

section.hero {
    color: white;
    height: 90vh;
    animation: moveDown 1s ease-in-out forwards;
    opacity: 0;
    .down-arrow {
        stroke: white;
        position: absolute;
        bottom: 1em;
        width: 1em;
        animation: moveArrow 1s alternate-reverse infinite;
        path {
            fill: white;
        }
    }
}

.more-info {
    img {
        width: 100%;
        object-fit: cover;
        height: 15em;
    }
    .title {
        font-weight: bold;
        font-size: 1.25rem;
    }
    .desc {
        line-height: 1.5rem;
    }
}

.open-nav {
    transform: translateX(0);
}

@media only screen and (min-width: 680px) {
    body {
        margin: 1.5em 5em;
        font-family: 'Poppins', sans-serif;
    }
}

@media only screen and (min-width:920px) {
    .menu {
        display: none;
    }
    nav {
        transform: translateX(0);
        position: unset;
        display: block;
        width: auto;
        height: auto;
        background: none;
        svg.close {
            display: none;
        }
        ul {
            display: flex;
            margin: 0;
            a {
                color: white;
                padding: .5em, 1.5em;
                font-size: .9rem;
                &:hover {
                    background: none;
                }
            }
        }
    }
    .hero-img {
        left: unset;
        right: 0;
        width: 55%;
        height: 90vh;
    }
    .logo {
        color: black;
        span {
            color: red;
        }
    }
    section.hero {
        color: black;
        height: 90vh;
        width: 40%;
        margin-bottom: 8em;
        margin-top: -5em;
        svg.down-arrow {
            stroke: black;
            position: unset;
            margin-bottom: 0;
            margin-top: 3em;
            path {
                fill: black;
            }
        }
    }
    .feature {
        display: grid;
        grid-template-columns: repeat(2, auto);
        gap: 3em;
        margin-bottom: 8em;
        img {
            width: 25em;
        }
        .content {
            text-align: right;
            width: 25em;
        }
    }
    .feature.reversed {
        grid-template-areas: "left right";
        img {
            grid-area: left;
        }
        .content {
            text-align: left;
            width: 25em;
            justify-self: left;
        }
    }
}

@media only screen and (min-width:1200px) {
    .wrapper {
        width: 1200px;
        margin: 0 auto;
    }
    .feature {
        gap: 0;
    }
}

@keyframes introLoad {
    from {
        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
    }
    to {
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
    }
}

@keyframes moveArrow {
    from {
        transform: translateY(-25px);
    }
    to {
        transform: translateY(0);
    }
}

@keyframes moveDown {
    from {
        transform: translateY(-100px);
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

